--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.8.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
